[project]
dependencies = [
  "argparse>=1.4.0",
  "audioop-lts>=0.2.2",
  "eyed3>=0.9.8",
  "lxml>=6.0.2",
  "pre-commit>=4.3.0",
  "protobuf>=6.32.1",
  "pydub>=0.25.1",
  "tinytag>=2.1.2",
  "tqdm>=4.67.1"
]
description = "Add your description here"
name = "mixxx-to-rekordbox"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[dependency-groups]
dev = [
  "ruff>=0.14.0"
]

[tool.ruff]
exclude = [
  ".venv",
  "proto"
]
